testsuite/tests/asmcomp/poll_attr_inserted.compilers.reference
File "poll_attr_inserted.ml", line 1:
Error: Function with poll-error attribute contains polling points (inserted by the compiler)

